# bwa-mem2-rust

./: .gitmodules  Cargo.toml
bwa-mem2/: Cargo.toml
bwa-mem2-sys/: Cargo.toml  bindgen.sh  build.rs  wrapper.cpp
bwa-mem2-sys/src/: lib.rs
bwa-mem2/src/: lib.rs
