[package]
name = "bwa-mem2"
version = "0.2.0"
edition = "2021"
authors = ["Kai Zhang <zhangkai33@westlake.edu.cn>"]
license = "MIT"

[dependencies]
libc = "*"
bwa-mem2-sys = { version = "0.1", workspace = true }
bstr = "1.12"
noodles = { version = "0.98", features = ["core", "fastq", "bam", "sam"] }
itertools = "0.14"

[dev-dependencies]
flate2 = "1.0"